...
            "state" : "translated",
            "value" : "Tempo Rimanente"
          }
        }
      }
    },
    "Torrent" : {
      "localizations" : {
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Torrent"
          }
        }
      }
    },
    "Torrent Details" : {
      "localizations" : {
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dettagli Torrent"
          }
...
            "state" : "translated",
            "value" : "File Torrent"
          }
        }
      }
    },
    "Torrent Files" : {
      "localizations" : {
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "File del Torrent"
          }
...
